[gd_scene load_steps=2 format=3 uid="uid://dgxihwbj7oh82"]

[ext_resource type="Script" path="res://world/scenes/multiplayer_scene.gd" id="1_qy637"]

[node name="multiplayer_scene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qy637")

[node name="host" type="Button" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 99.0
offset_right = 226.0
offset_bottom = 166.0
text = "Host
"

[node name="join" type="Button" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 99.0
offset_right = 412.0
offset_bottom = 165.0
text = "Join
"

[node name="startgame" type="Button" parent="."]
layout_mode = 0
offset_left = 433.0
offset_top = 100.0
offset_right = 584.0
offset_bottom = 163.0
text = "Start"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 45.0
offset_right = 522.0
offset_bottom = 76.0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://assets/scenes/nissan_gtr.tscn")
spawn_path = NodePath("..")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 66.0
offset_top = 45.0
offset_right = 118.0
offset_bottom = 68.0
text = "Name
"

[connection signal="button_down" from="host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="startgame" to="." method="_on_startgame_button_down"]
